Link (a) -> Language Selection

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <div class="lang">
         <select data-menu>
           <option selected>English</option>
-          <option>Farsi</option>
+          <option><a href="http://google.com">Farsi</a></option>
         </select>
       </div>
     </div>
