Product details (en/fa) details reconstructed

--- a/productDetails-fa.html
+++ b/productDetails-fa.html
@@ -52,16 +52,16 @@
       <h1 class="title">گلاب پاش</h1>
       <div class="images">
         <div class="image">
-          <img src="icon.png" alt="">
+          <img src="img/product.png" alt="گلاب پاش">
         </div>
         <div class="image">
-          <img src="icon.png" alt="">
+          <img src="img/pot.png" alt="کوزه">
         </div>
         <div class="image">
-          <img src="icon.png" alt="">
+          <img src="img/plate.png" alt="بشقاب">
         </div>
         <div class="image">
-          <img src="icon.png" alt="">
+          <img src="img/tree.png" alt="درخت">
         </div>
       </div>
     </div>
