More minor improvements

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -14,6 +14,9 @@
 
   <!--  <link rel="stylesheet" href="css/flexboxgrid.min.css">-->
   <!--  <link rel="stylesheet" href="css/normalize.css">-->
+  <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700&display=swap" rel="stylesheet">
+  <link href="https://cdn.rawgit.com/rastikerdar/vazir-font/v24.0.0/dist/font-face.css" rel="stylesheet"
+        type="text/css"/>
   <link rel="stylesheet" href="css/en/main.css">
 
   <meta name="theme-color" content="#fafafa">
@@ -27,19 +30,17 @@
 
 <!-- Add your site or application content here -->
 <div class="container">
-  <span class="fsymbol smaller opac">TY</span>
-  <div class="header transparent">
-    <div class="lang"><span>English</span>
-      <img src="img/translate.svg" alt="Language"/>
-    </div>
+  <span class="fsymbol opac">TY</span>
+  <div class="header">
     <div class="nav">
       <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Galley</a></li>
-        <li><a href="#">Collection</a></li>
-        <li><a href="#">Wholesale</a></li>
-        <li><a href="#">Export</a></li>
-        <li><a href="#">About us</a></li>
+        <li class="links"><a href="#">Home</a></li>
+        <li class="links"><a href="#">Galley</a></li>
+        <li class="links"><a href="#">Collection</a></li>
+        <li class="links"><a href="#">Wholesale</a></li>
+        <li class="links"><a href="#">Export</a></li>
+        <li class="links"><a href="#">About us</a></li>
+        <li class="shop"><img src="img/shopping-cart.svg" alt="Buy"><span>4</span></li>
       </ul>
     </div>
   </div>
@@ -140,10 +141,26 @@
   <div class="footer">
     <div class="details">
       <div class="logo">
-        <div><img src="img/logo.png" alt=""></div>
+        <div><img src="img/artcologo3.svg" alt=""></div>
       </div>
       <div class="site-map">
-        <span>Explore</span>
+          <span>Explore
+            <span class="footer-slider-wrapper">
+              <span class="footer-slider roll-it">
+                <span>Smart</span>
+                <span>Inspiring</span>
+                <span>Inovative</span>
+                <span>Technotile</span>
+                <span>magic</span>
+                <span>Interesting</span>
+                <span>Reliable</span>
+                <span>immortal</span>
+                <span>Divine</span>
+                <span>Lovely</span>
+                <span>Pixel</span>
+              </span>
+            </span>
+          </span>
         <div class="wrapper">
           <div class="left">
             <ul>
@@ -214,7 +231,7 @@
           <span class="label">Enter your email</span>
           <span class="border"></span>
         </label>
-        <button type="submit">Submit</button>
+        <button class="submit"></button>
       </div>
     </div>
     <div class="social">
