--- a/aboutUs-fa.html
+++ b/aboutUs-fa.html
@@ -14,6 +14,9 @@
 
   <!--  <link rel="stylesheet" href="css/flexboxgrid.min.css">-->
   <!--  <link rel="stylesheet" href="css/normalize.css">-->
+  <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700&display=swap" rel="stylesheet">
+  <link href="https://cdn.rawgit.com/rastikerdar/vazir-font/v24.0.0/dist/font-face.css" rel="stylesheet"
+        type="text/css"/>
   <link rel="stylesheet" href="css/fa/main.css">
 
   <meta name="theme-color" content="#fafafa">
@@ -28,18 +31,16 @@
 <!-- Add your site or application content here -->
 <div class="container">
   <span class="fsymbol smaller opac">TY</span>
-  <div class="header transparent">
-    <div class="lang"><span>پارسی</span>
-      <img src="img/translate.svg" alt="Language"/>
-    </div>
+  <div class="header">
     <div class="nav">
       <ul>
-        <li><a href="#">خانه</a></li>
-        <li><a href="#">گالری</a></li>
-        <li><a href="#">مجموعه</a></li>
-        <li><a href="#">خرید</a></li>
-        <li><a href="#">صادرات</a></li>
-        <li><a href="#">درباره ما</a></li>
+        <li class="links"><a href="#">خانه</a></li>
+        <li class="links"><a href="#">گالری</a></li>
+        <li class="links"><a href="#">مجموعه</a></li>
+        <li class="links"><a href="#">خرید</a></li>
+        <li class="links"><a href="#">صادرات</a></li>
+        <li class="links"><a href="#">درباره ما</a></li>
+        <li class="shop"><img src="img/shopping-cart.svg" alt="Buy"><span>4</span></li>
       </ul>
     </div>
   </div>
@@ -139,10 +140,26 @@
   <div class="footer">
     <div class="details">
       <div class="logo">
-        <div><img src="img/logo.png" alt=""></div>
+        <div><img src="img/artcologo3.svg" alt=""></div>
       </div>
       <div class="site-map">
-        <span>اکسپلور</span>
+          <span>اکسپلور
+            <span class="footer-slider-wrapper">
+              <span class="footer-slider roll-it">
+                <span>دقت</span>
+                <span>ظرافت</span>
+                <span>طراحی</span>
+                <span>این</span>
+                <span>چند</span>
+                <span>نمونه</span>
+                <span>کلمه</span>
+                <span>لورم</span>
+                <span>ایپسوم</span>
+                <span>است</span>
+                <span>آخری</span>
+              </span>
+            </span>
+          </span>
         <div class="wrapper">
           <div class="left">
             <ul>
@@ -213,7 +230,7 @@
           <span class="label">ایمیل را وارد کنید</span>
           <span class="border"></span>
         </label>
-        <button type="submit">ثبت</button>
+        <button class="submit"></button>
       </div>
     </div>
     <div class="social">
@@ -229,7 +246,7 @@
         </a>
       </div>
     </div>
-    <div class="copyright"><h6>تمامی حقوق برای شرکت <b>ARTCO</b>محفوظ است، 1398</h6></div>
+    <div class="copyright"><h6> تمامی حقوق برای شرکت <b>ARTCO</b> محفوظ است، 1398</h6></div>
   </div>
 </div>
 
