--- a/productDetails-fa.html
+++ b/productDetails-fa.html
@@ -134,7 +134,7 @@
   <div class="footer">
     <div class="details">
       <div class="logo">
-        <div><img src="img/logo.png" alt=""></div>
+        <div><img src="img/artcologo3.svg" alt=""></div>
       </div>
       <div class="site-map">
           <span>اکسپلور
