AddToCard En finished 2

--- a/addToCard.html
+++ b/addToCard.html
@@ -113,7 +113,7 @@
   </div>
   <div class="card-contact">
     <div class="mail">
-      <h5>Read about our customer service</h5>
+      <h5>Read about our customer services</h5>
       <span>Customer service <img src="img/upload.png" alt=""></span>
     </div>
     <div class="card-dl">
