generalshop(en/fa) - Link(a) tag added

--- a/generalshop-fa.html
+++ b/generalshop-fa.html
@@ -58,35 +58,47 @@
       </ul>
     </div>
     <div class="items-wrapper">
-      <div class="item" >
-        <img src="img/0.jpg" alt="">
-        <span>Moham. D5-D6</span>
-        <div class="seemore">مشاهده بیشتر</div>
+      <div class="item">
+        <a href="#">
+          <img src="img/0.jpg" alt="">
+          <span>Moham. D5-D6</span>
+          <div class="seemore">مشاهده بیشتر</div>
+        </a>
       </div>
       <div class="item">
-        <img src="img/ring.jpg" alt="">
-        <span>Miveh G5-D6</span>
-        <div class="seemore">مشاهده بیشتر</div>
+        <a href="#">
+          <img src="img/ring.jpg" alt="">
+          <span>Miveh G5-D6</span>
+          <div class="seemore">مشاهده بیشتر</div>
+        </a>
       </div>
       <div class="item">
-        <img src="img/0.jpg" alt="">
-        <span>Flower D5-D6</span>
-        <div class="seemore">مشاهده بیشتر</div>
+        <a href="#">
+          <img src="img/0.jpg" alt="">
+          <span>Flower D5-D6</span>
+          <div class="seemore">مشاهده بیشتر</div>
+        </a>
       </div>
       <div class="item">
-        <img src="img/0.jpg" alt="">
-        <span>Flower D5-D6</span>
-        <div class="seemore">مشاهده بیشتر</div>
+        <a href="#">
+          <img src="img/0.jpg" alt="">
+          <span>Flower D5-D6</span>
+          <div class="seemore">مشاهده بیشتر</div>
+        </a>
       </div>
       <div class="item">
-        <img src="img/0.jpg" alt="">
-        <span>Flower D5-D6</span>
-        <div class="seemore">مشاهده بیشتر</div>
+        <a href="#">
+          <img src="img/0.jpg" alt="">
+          <span>Flower D5-D6</span>
+          <div class="seemore">مشاهده بیشتر</div>
+        </a>
       </div>
       <div class="item">
-        <img src="img/ring.jpg" alt="">
-        <span>Flower D5-D6</span>
-        <div class="seemore">مشاهده بیشتر</div>
+        <a href="#">
+          <img src="img/ring.jpg" alt="">
+          <span>Flower D5-D6</span>
+          <div class="seemore">مشاهده بیشتر</div>
+        </a>
       </div>
     </div>
   </div>
