--- a/generalshop.html
+++ b/generalshop.html
@@ -60,34 +60,46 @@
     </div>
     <div class="items-wrapper">
       <div class="item">
-        <img src="img/0.jpg" alt="">
-        <span>Moham. D5-D6</span>
-        <div class="seemore">See more</div>
+        <a href="#">
+          <img src="img/0.jpg" alt="">
+          <span>Moham. D5-D6</span>
+          <div class="seemore">See more</div>
+        </a>
       </div>
       <div class="item">
-        <img src="img/ring.jpg" alt="">
-        <span>Miveh G5-D6</span>
-        <div class="seemore">See more</div>
+        <a href="#">
+          <img src="img/ring.jpg" alt="">
+          <span>Miveh G5-D6</span>
+          <div class="seemore">See more</div>
+        </a>
       </div>
       <div class="item">
-        <img src="img/0.jpg" alt="">
-        <span>Flower D5-D6</span>
-        <div class="seemore">See more</div>
+        <a href="#">
+          <img src="img/0.jpg" alt="">
+          <span>Flower D5-D6</span>
+          <div class="seemore">See more</div>
+        </a>
       </div>
       <div class="item">
-        <img src="img/0.jpg" alt="">
-        <span>Flower D5-D6</span>
-        <div class="seemore">See more</div>
+        <a href="#">
+          <img src="img/0.jpg" alt="">
+          <span>Flower D5-D6</span>
+          <div class="seemore">See more</div>
+        </a>
       </div>
       <div class="item">
-        <img src="img/0.jpg" alt="">
-        <span>Flower D5-D6</span>
-        <div class="seemore">See more</div>
+        <a href="#">
+          <img src="img/0.jpg" alt="">
+          <span>Flower D5-D6</span>
+          <div class="seemore">See more</div>
+        </a>
       </div>
       <div class="item">
-        <img src="img/ring.jpg" alt="">
-        <span>Flower D5-D6</span>
-        <div class="seemore">See more</div>
+        <a href="#">
+          <img src="img/ring.jpg" alt="">
+          <span>Flower D5-D6</span>
+          <div class="seemore">See more</div>
+        </a>
       </div>
     </div>
   </div>
