generalshop(en/fa) - category selection feature added

--- a/generalshop-fa.html
+++ b/generalshop-fa.html
@@ -51,53 +51,74 @@
     <div class="title regular">دسته بندی ها</div>
     <div class="cats-title">
       <ul>
-        <li><a href="#">میوه خوری</a></li>
-        <li><a href="#">لوازم</a></li>
-        <li><a href="#">قندون</a></li>
-        <li><a href="#">گلها</a></li>
+        <li class="selected" data-category="all"><a href="#">همه</a></li>
+        <li data-category="miveh"><a href="#">میوه خوری</a></li>
+        <li data-category="flower"><a href="#">گل</a></li>
+        <li data-category="lorem"><a href="#">لورم</a></li>
       </ul>
     </div>
     <div class="items-wrapper">
-      <div class="item">
-        <a href="#">
+      <div class="item" data-category="lorem">
+        <a href="javascript:;">
           <img src="img/0.jpg" alt="">
-          <span>Moham. D5-D6</span>
-          <div class="seemore">مشاهده بیشتر</div>
+          <span>لورم. D5-D6</span>
+          <div class="seemore">ادامه مطلب</div>
         </a>
       </div>
-      <div class="item">
-        <a href="#">
+      <div class="item" data-category="miveh">
+        <a href="javascript:;">
           <img src="img/ring.jpg" alt="">
-          <span>Miveh G5-D6</span>
-          <div class="seemore">مشاهده بیشتر</div>
+          <span>میوه G5-D6</span>
+          <div class="seemore">ادامه مطلب</div>
         </a>
       </div>
-      <div class="item">
-        <a href="#">
+      <div class="item" data-category="flower">
+        <a href="javascript:;">
           <img src="img/0.jpg" alt="">
-          <span>Flower D5-D6</span>
-          <div class="seemore">مشاهده بیشتر</div>
+          <span>گل D5-D6</span>
+          <div class="seemore">ادامه مطلب</div>
         </a>
       </div>
-      <div class="item">
-        <a href="#">
+      <div class="item" data-category="flower">
+        <a href="javascript:;">
           <img src="img/0.jpg" alt="">
-          <span>Flower D5-D6</span>
-          <div class="seemore">مشاهده بیشتر</div>
+          <span>گل D5-D6</span>
+          <div class="seemore">ادامه مطلب</div>
         </a>
       </div>
-      <div class="item">
-        <a href="#">
+      <div class="item" data-category="flower">
+        <a href="javascript:;">
           <img src="img/0.jpg" alt="">
-          <span>Flower D5-D6</span>
-          <div class="seemore">مشاهده بیشتر</div>
+          <span>گل D5-D6</span>
+          <div class="seemore">ادامه مطلب</div>
         </a>
       </div>
-      <div class="item">
-        <a href="#">
+      <div class="item" data-category="flower">
+        <a href="javascript:;">
           <img src="img/ring.jpg" alt="">
-          <span>Flower D5-D6</span>
-          <div class="seemore">مشاهده بیشتر</div>
+          <span>گل D5-D6</span>
+          <div class="seemore">ادامه مطلب</div>
+        </a>
+      </div>
+      <div class="item" data-category="lorem">
+        <a href="javascript:;">
+          <img src="img/ring.jpg" alt="">
+          <span>لورم D5-D6</span>
+          <div class="seemore">ادامه مطلب</div>
+        </a>
+      </div>
+      <div class="item" data-category="miveh">
+        <a href="javascript:;">
+          <img src="img/plate.png" alt="">
+          <span>میوه D5-D6</span>
+          <div class="seemore">ادامه مطلب</div>
+        </a>
+      </div>
+      <div class="item" data-category="گل">
+        <a href="javascript:;">
+          <img src="img/pot.png" alt="">
+          <span>گل D5-D6</span>
+          <div class="seemore">ادامه مطلب</div>
         </a>
       </div>
     </div>
