--- a/generalshop.html
+++ b/generalshop.html
@@ -52,51 +52,72 @@
     <div class="title regular">Categories</div>
     <div class="cats-title">
       <ul>
-        <li><a href="#">MiveKhori</a></li>
-        <li><a href="#">Lavazem</a></li>
-        <li><a href="#">LoremIps</a></li>
-        <li><a href="#">FlowerSo</a></li>
+        <li class="selected" data-category="all"><a href="#">All cats</a></li>
+        <li data-category="miveh"><a href="#">Miveh khori</a></li>
+        <li data-category="flower"><a href="#">Flower</a></li>
+        <li data-category="lorem"><a href="#">LoremIps</a></li>
       </ul>
     </div>
     <div class="items-wrapper">
-      <div class="item">
-        <a href="#">
+      <div class="item" data-category="lorem">
+        <a href="javascript:;">
           <img src="img/0.jpg" alt="">
           <span>Moham. D5-D6</span>
           <div class="seemore">See more</div>
         </a>
       </div>
-      <div class="item">
-        <a href="#">
+      <div class="item" data-category="miveh">
+        <a href="javascript:;">
           <img src="img/ring.jpg" alt="">
           <span>Miveh G5-D6</span>
           <div class="seemore">See more</div>
         </a>
       </div>
-      <div class="item">
-        <a href="#">
+      <div class="item" data-category="flower">
+        <a href="javascript:;">
           <img src="img/0.jpg" alt="">
           <span>Flower D5-D6</span>
           <div class="seemore">See more</div>
         </a>
       </div>
-      <div class="item">
-        <a href="#">
+      <div class="item" data-category="flower">
+        <a href="javascript:;">
           <img src="img/0.jpg" alt="">
           <span>Flower D5-D6</span>
           <div class="seemore">See more</div>
         </a>
       </div>
-      <div class="item">
-        <a href="#">
+      <div class="item" data-category="flower">
+        <a href="javascript:;">
           <img src="img/0.jpg" alt="">
           <span>Flower D5-D6</span>
           <div class="seemore">See more</div>
         </a>
       </div>
-      <div class="item">
-        <a href="#">
+      <div class="item" data-category="flower">
+        <a href="javascript:;">
           <img src="img/ring.jpg" alt="">
+          <span>Flower D5-D6</span>
+          <div class="seemore">See more</div>
+        </a>
+      </div>
+      <div class="item" data-category="lorem">
+        <a href="javascript:;">
+          <img src="img/ring.jpg" alt="">
+          <span>Moham D5-D6</span>
+          <div class="seemore">See more</div>
+        </a>
+      </div>
+      <div class="item" data-category="miveh">
+        <a href="javascript:;">
+          <img src="img/plate.png" alt="">
+          <span>Miveh D5-D6</span>
+          <div class="seemore">See more</div>
+        </a>
+      </div>
+      <div class="item" data-category="Flower">
+        <a href="javascript:;">
+          <img src="img/pot.png" alt="">
           <span>Flower D5-D6</span>
           <div class="seemore">See more</div>
         </a>
