--- a/aboutUs-fa.html
+++ b/aboutUs-fa.html
@@ -45,18 +45,62 @@
     </div>
   </div>
 
-  <div class="half-slider">
-    <div class="hstext-wrapper">
-      <h1>کیفیت بالا<br>اهمیت ما</h1>
-      <h6>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. چاپگرها و متون
-        بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است</h6>
-    </div>
-    <div class="hs-wrapper">
-      <div class="indicator">
-        <div class="sl"></div>
-        <div class="nsl"></div>
-        <div class="sl"></div>
-        <div class="sl"></div>
+  <div class="slider-container">
+    <div class="slider-control left inactive"></div>
+    <div class="slider-control right"></div>
+    <ul class="slider-pagi"></ul>
+    <div class="slider">
+      <div class="slide slide-0 active">
+        <div class="slide__bg"></div>
+        <div class="slide__content">
+          <svg class="slide__overlay" viewBox="0 0 720 405" preserveAspectRatio="xMaxYMax slice">
+            <path class="slide__overlay-path" d="M720,0 370,0 200,405 720,405"/>
+          </svg>
+          <div class="slide__text">
+            <h2 class="slide__text-heading">فیروزه کوبی</h2>
+            <p class="slide__text-desc">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد. کتابهای زیادی در شصت و سه درصد گذشته، حال و آینده شناخت فراوان جامعه و متخصصان را می طلبد</p>
+            <a class="slide__text-link">لینک پروژه</a>
+          </div>
+        </div>
+      </div>
+      <div class="slide slide-1 ">
+        <div class="slide__bg"></div>
+        <div class="slide__content">
+          <svg class="slide__overlay" viewBox="0 0 720 405" preserveAspectRatio="xMaxYMax slice">
+            <path class="slide__overlay-path" d="M720,0 370,0 200,405 720,405"/>
+          </svg>
+          <div class="slide__text">
+            <h2 class="slide__text-heading">توضیحات</h2>
+            <p class="slide__text-desc">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد. کتابهای زیادی در شصت و سه درصد گذشته، حال و آینده شناخت فراوان جامعه و متخصصان را می طلبد</p>
+            <a class="slide__text-link">لینک پروژه</a>
+          </div>
+        </div>
+      </div>
+      <div class="slide slide-2">
+        <div class="slide__bg"></div>
+        <div class="slide__content">
+          <svg class="slide__overlay" viewBox="0 0 720 405" preserveAspectRatio="xMaxYMax slice">
+            <path class="slide__overlay-path" d="M720,0 370,0 200,405 720,405"/>
+          </svg>
+          <div class="slide__text">
+            <h2 class="slide__text-heading">پروژه ی 3</h2>
+            <p class="slide__text-desc">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد. کتابهای زیادی در شصت و سه درصد گذشته، حال و آینده شناخت فراوان جامعه و متخصصان را می طلبد</p>
+            <a class="slide__text-link">لینک پروژه</a>
+          </div>
+        </div>
+      </div>
+      <div class="slide slide-3">
+        <div class="slide__bg"></div>
+        <div class="slide__content">
+          <svg class="slide__overlay" viewBox="0 0 720 405" preserveAspectRatio="xMaxYMax slice">
+            <path class="slide__overlay-path" d="M720,0 370,0 200,405 720,405"/>
+          </svg>
+          <div class="slide__text">
+            <h2 class="slide__text-heading">پروژه ی 4</h2>
+            <p class="slide__text-desc">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد. کتابهای زیادی در شصت و سه درصد گذشته، حال و آینده شناخت فراوان جامعه و متخصصان را می طلبد</p>
+            <a class="slide__text-link">لینک پروژه</a>
+          </div>
+        </div>
       </div>
     </div>
   </div>
