--- a/aboutUs.html
+++ b/aboutUs.html
@@ -44,22 +44,92 @@
       </ul>
     </div>
   </div>
-
-  <div class="half-slider">
-    <div class="hstext-wrapper">
-      <h1>High Quality<br>Our Priority</h1>
-      <h6>Iranian lorem ipsum history, artifact and lorem ipsum of something, this text is just a sample to fill this
-        area</h6>
-    </div>
-    <div class="hs-wrapper">
-      <div class="indicator">
-        <div class="sl"></div>
-        <div class="nsl"></div>
-        <div class="sl"></div>
-        <div class="sl"></div>
+  <div class="slider-container">
+    <div class="slider-control left inactive"></div>
+    <div class="slider-control right"></div>
+    <ul class="slider-pagi"></ul>
+    <div class="slider">
+      <div class="slide slide-0 active">
+        <div class="slide__bg"></div>
+        <div class="slide__content">
+          <svg class="slide__overlay" viewBox="0 0 720 405" preserveAspectRatio="xMaxYMax slice">
+            <path class="slide__overlay-path" d="M0,0 350,0 500,405 0,405"/>
+          </svg>
+          <div class="slide__text">
+            <h2 class="slide__text-heading">Firoozeh koobi</h2>
+            <p class="slide__text-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio veniam
+              minus illo debitis nihil animi facere, doloremque voluptate tempore quia. Lorem ipsum dolor sit amet,
+              consectetur adipisicing elit. Distinctio veniam minus illo debitis nihil animi facere, doloremque
+              voluptate tempore quia.</p>
+            <a class="slide__text-link">Project link</a>
+          </div>
+        </div>
+      </div>
+      <div class="slide slide-1 ">
+        <div class="slide__bg"></div>
+        <div class="slide__content">
+          <svg class="slide__overlay" viewBox="0 0 720 405" preserveAspectRatio="xMaxYMax slice">
+            <path class="slide__overlay-path" d="M0,0 350,0 500,405 0,405"/>
+          </svg>
+          <div class="slide__text">
+            <h2 class="slide__text-heading">Description</h2>
+            <p class="slide__text-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio veniam
+              minus illo debitis nihil animi facere, doloremque voluptate tempore quia. Lorem ipsum dolor sit amet,
+              consectetur adipisicing elit. Distinctio veniam minus illo debitis nihil animi facere, doloremque
+              voluptate tempore quia.</p>
+            <a class="slide__text-link">Project link</a>
+          </div>
+        </div>
+      </div>
+      <div class="slide slide-2">
+        <div class="slide__bg"></div>
+        <div class="slide__content">
+          <svg class="slide__overlay" viewBox="0 0 720 405" preserveAspectRatio="xMaxYMax slice">
+            <path class="slide__overlay-path" d="M0,0 350,0 500,405 0,405"/>
+          </svg>
+          <div class="slide__text">
+            <h2 class="slide__text-heading">Project name 3</h2>
+            <p class="slide__text-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio veniam
+              minus illo debitis nihil animi facere, doloremque voluptate tempore quia. Lorem ipsum dolor sit amet,
+              consectetur adipisicing elit. Distinctio veniam minus illo debitis nihil animi facere, doloremque
+              voluptate tempore quia.</p>
+            <a class="slide__text-link">Project link</a>
+          </div>
+        </div>
+      </div>
+      <div class="slide slide-3">
+        <div class="slide__bg"></div>
+        <div class="slide__content">
+          <svg class="slide__overlay" viewBox="0 0 720 405" preserveAspectRatio="xMaxYMax slice">
+            <path class="slide__overlay-path" d="M0,0 350,0 500,405 0,405"/>
+          </svg>
+          <div class="slide__text">
+            <h2 class="slide__text-heading">Project name 4</h2>
+            <p class="slide__text-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio veniam
+              minus illo debitis nihil animi facere, doloremque voluptate tempore quia. Lorem ipsum dolor sit amet,
+              consectetur adipisicing elit. Distinctio veniam minus illo debitis nihil animi facere, doloremque
+              voluptate tempore quia.</p>
+            <a class="slide__text-link">Project link</a>
+          </div>
+        </div>
       </div>
     </div>
   </div>
+<!--  <div class="half-slider">-->
+<!--    <div class="hstext-wrapper">-->
+<!--      <h1>High Quality<br>Our Priority</h1>-->
+<!--      <h6>Iranian lorem ipsum history, artifact and lorem ipsum of something, this text is just a sample to fill this-->
+<!--        area</h6>-->
+<!--    </div>-->
+<!--    <div class="hs-wrapper">-->
+<!--      <div class="indicator">-->
+<!--        <div class="sl"></div>-->
+<!--        <div class="nsl"></div>-->
+<!--        <div class="sl"></div>-->
+<!--        <div class="sl"></div>-->
+<!--      </div>-->
+<!--    </div>-->
+<!--  </div>-->
   <div class="categories marginbackground">
     <div class="title nonitalic">Creation</div>
     <h5>Iranian lorem ipsum history, artifact and lorem ipsum of something, this text is just a sample to fill this
