Slider index page

--- a/index-fa.html
+++ b/index-fa.html
@@ -31,6 +31,24 @@
 <!-- Add your site or application content here -->
 <div class="container">
   <section class="home" id="home">
+    <div class="slider-container v100">
+      <div class="slider-control left inactive"></div>
+      <div class="slider-control right"></div>
+      <div class="slider">
+        <div class="slide slide-0 active">
+          <div class="slide__bg"></div>
+        </div>
+        <div class="slide slide-1 ">
+          <div class="slide__bg"></div>
+        </div>
+        <div class="slide slide-2">
+          <div class="slide__bg"></div>
+        </div>
+        <div class="slide slide-3">
+          <div class="slide__bg"></div>
+        </div>
+      </div>
+    </div>
     <div class="logo">
       <img src="img/artcologo3.svg" alt="ARTCO">
     </div>
