Slider gallery page

--- a/gallery-fa.html
+++ b/gallery-fa.html
@@ -57,16 +57,66 @@
   <section id="other">
 
     <div class="gooddesign-slide">
-      <div class="description">
-        <div class="text-wrapper">
-          <h1>طراحی خوب مهمه</h1>
-          <h6>طراحی خوب و مقداری متن نمونه برای پر کردن این جای خالی و جای خالی خط بعد با طراحی خوب</h6>
-          <button class="learn-more">
-            <span class="circle" aria-hidden="true">
-              <span class="icon arrow"></span>
-            </span>
-            <span class="button-text">صفحه صادرات</span>
-          </button>
+      <div class="slider-container">
+        <div class="slider-control left inactive"></div>
+        <div class="slider-control right"></div>
+        <div class="slider">
+          <div class="slide slide-0 active">
+            <div class="slide__bg"></div>
+            <div class="slide__content">
+              <svg class="slide__overlay" viewBox="0 0 720 405" preserveAspectRatio="xMaxYMax slice">
+                <path class="slide__overlay-path" d="M0,0 270,0 350,405 0,405"/>
+              </svg>
+              <div class="slide__text">
+                <h2 class="slide__text-heading">طراحی خوب مهمه</h2>
+                <p class="slide__text-desc">طراحی خوب و مقداری متن نمونه برای پر کردن این جای خالی و جای خالی خط بعد با
+                  طراحی خوب</p>
+                <a class="slide__text-link">صفحه صادرات</a>
+              </div>
+            </div>
+          </div>
+          <div class="slide slide-1 ">
+            <div class="slide__bg"></div>
+            <div class="slide__content">
+              <svg class="slide__overlay" viewBox="0 0 720 405" preserveAspectRatio="xMaxYMax slice">
+                <path class="slide__overlay-path" d="M0,0 270,0 350,405 0,405"/>
+              </svg>
+              <div class="slide__text">
+                <h2 class="slide__text-heading">طراحی خوب مهمه</h2>
+                <p class="slide__text-desc">طراحی خوب و مقداری متن نمونه برای پر کردن این جای خالی و جای خالی خط بعد با
+                  طراحی خوب</p>
+                <a class="slide__text-link">صفحه صادرات</a>
+              </div>
+            </div>
+          </div>
+          <div class="slide slide-2">
+            <div class="slide__bg"></div>
+            <div class="slide__content">
+              <svg class="slide__overlay" viewBox="0 0 720 405" preserveAspectRatio="xMaxYMax slice">
+                <path class="slide__overlay-path" d="M0,0 270,0 350,405 0,405"/>
+              </svg>
+              <div class="slide__text">
+                <h2 class="slide__text-heading">طراحی خوب مهمه</h2>
+                <p class="slide__text-desc">طراحی خوب و مقداری متن نمونه برای پر کردن این جای خالی و جای خالی خط بعد با
+                  طراحی خوب</p>
+                <a class="slide__text-link">صفحه صادرات</a>
+              </div>
+            </div>
+          </div>
+          <div class="slide slide-3">
+            <div class="slide__bg"></div>
+            <div class="slide__content">
+              <svg class="slide__overlay" viewBox="0 0 720 405" preserveAspectRatio="xMaxYMax slice">
+                <path class="slide__overlay-path" d="M0,0 270,0 350,405 0,405"/>
+              </svg>
+              <div class="slide__text">
+                <h2 class="slide__text-heading">طراحی خوب مهمه</h2>
+                <p class="slide__text-desc">طراحی خوب و مقداری متن نمونه برای پر کردن این جای خالی و جای خالی خط بعد با
+                  طراحی خوب</p>
+                <a class="slide__text-link">صفحه صادرات</a>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
       <div class="image-object">
