--- a/gallery.html
+++ b/gallery.html
@@ -57,19 +57,88 @@
   <section id="other">
 
     <div class="gooddesign-slide">
-      <div class="description">
-        <div class="text-wrapper">
-          <h1>Good design matters</h1>
-          <h6>Good design matters and some text. Lorem ipsum as a test for this is just a text Good design matters and
-            some</h6>
-          <button class="learn-more longer">
-            <span class="circle" aria-hidden="true">
-              <span class="icon arrow"></span>
-            </span>
-            <span class="button-text">Product Page</span>
-          </button>
+      <div class="slider-container">
+        <div class="slider-control left inactive"></div>
+        <div class="slider-control right"></div>
+        <div class="slider">
+          <div class="slide slide-0 active">
+            <div class="slide__bg"></div>
+            <div class="slide__content">
+              <svg class="slide__overlay" viewBox="0 0 720 405" preserveAspectRatio="xMaxYMax slice">
+                <path class="slide__overlay-path" d="M760,0 430,0 370,405 760,405"/>
+              </svg>
+              <div class="slide__text">
+                <h2 class="slide__text-heading">Good design matters</h2>
+                <p class="slide__text-desc">Good design matters and some text. Lorem ipsum as a test for this is just a
+                  text Good design matters and
+                  some</p>
+                <a class="slide__text-link">Product Page</a>
+              </div>
+            </div>
+          </div>
+          <div class="slide slide-1 ">
+            <div class="slide__bg"></div>
+            <div class="slide__content">
+              <svg class="slide__overlay" viewBox="0 0 720 405" preserveAspectRatio="xMaxYMax slice">
+                <path class="slide__overlay-path" d="M760,0 430,0 370,405 760,405"/>
+              </svg>
+              <div class="slide__text">
+                <h2 class="slide__text-heading">Description</h2>
+                <p class="slide__text-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio veniam
+                  minus illo debitis nihil animi facere, doloremque voluptate tempore quia. Lorem ipsum dolor sit amet,
+                  consectetur adipisicing elit. Distinctio veniam minus illo debitis nihil animi facere, doloremque
+                  voluptate tempore quia.</p>
+                <a class="slide__text-link">Project link</a>
+              </div>
+            </div>
+          </div>
+          <div class="slide slide-2">
+            <div class="slide__bg"></div>
+            <div class="slide__content">
+              <svg class="slide__overlay" viewBox="0 0 720 405" preserveAspectRatio="xMaxYMax slice">
+                <path class="slide__overlay-path" d="M760,0 430,0 370,405 760,405"/>
+              </svg>
+              <div class="slide__text">
+                <h2 class="slide__text-heading">Project name 3</h2>
+                <p class="slide__text-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio veniam
+                  minus illo debitis nihil animi facere, doloremque voluptate tempore quia. Lorem ipsum dolor sit amet,
+                  consectetur adipisicing elit. Distinctio veniam minus illo debitis nihil animi facere, doloremque
+                  voluptate tempore quia.</p>
+                <a class="slide__text-link">Project link</a>
+              </div>
+            </div>
+          </div>
+          <div class="slide slide-3">
+            <div class="slide__bg"></div>
+            <div class="slide__content">
+              <svg class="slide__overlay" viewBox="0 0 720 405" preserveAspectRatio="xMaxYMax slice">
+                <path class="slide__overlay-path" d="M760,0 430,0 370,405 760,405"/>
+              </svg>
+              <div class="slide__text">
+                <h2 class="slide__text-heading">Project name 4</h2>
+                <p class="slide__text-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio veniam
+                  minus illo debitis nihil animi facere, doloremque voluptate tempore quia. Lorem ipsum dolor sit amet,
+                  consectetur adipisicing elit. Distinctio veniam minus illo debitis nihil animi facere, doloremque
+                  voluptate tempore quia.</p>
+                <a class="slide__text-link">Project link</a>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
+<!--      <div class="description">-->
+<!--        <div class="text-wrapper">-->
+<!--          <h1>Good design matters</h1>-->
+<!--          <h6>Good design matters and some text. Lorem ipsum as a test for this is just a text Good design matters and-->
+<!--            some</h6>-->
+<!--          <button class="learn-more longer">-->
+<!--            <span class="circle" aria-hidden="true">-->
+<!--              <span class="icon arrow"></span>-->
+<!--            </span>-->
+<!--            <span class="button-text">Product Page</span>-->
+<!--          </button>-->
+<!--        </div>-->
+<!--      </div>-->
       <div class="image-object">
         <img src="img/pot.png" alt="">
       </div>
