--- a/addToCard.html
+++ b/addToCard.html
@@ -66,6 +66,62 @@
           <div class="price">10200000 Rials</div>
           <div class="close"></div>
         </div>
+        <div class="item">
+          <img src="tile.png" alt="item">
+          <h5 class="name">Firooze lorem GF12</h5>
+          <span class="entity">5</span>
+          <div class="price">10200000 Rials</div>
+          <div class="close"></div>
+        </div>
+        <div class="item">
+          <img src="tile.png" alt="item">
+          <h5 class="name">Firooze lorem GF12</h5>
+          <span class="entity">5</span>
+          <div class="price">10200000 Rials</div>
+          <div class="close"></div>
+        </div>
+        <div class="item">
+          <img src="tile.png" alt="item">
+          <h5 class="name">Firooze lorem GF12</h5>
+          <span class="entity">5</span>
+          <div class="price">10200000 Rials</div>
+          <div class="close"></div>
+        </div>
+        <div class="item">
+          <img src="tile.png" alt="item">
+          <h5 class="name">Firooze lorem GF12</h5>
+          <span class="entity">5</span>
+          <div class="price">10200000 Rials</div>
+          <div class="close"></div>
+        </div>
+        <div class="item">
+          <img src="tile.png" alt="item">
+          <h5 class="name">Firooze lorem GF12</h5>
+          <span class="entity">5</span>
+          <div class="price">10200000 Rials</div>
+          <div class="close"></div>
+        </div>
+        <div class="item">
+          <img src="tile.png" alt="item">
+          <h5 class="name">Firooze lorem GF12</h5>
+          <span class="entity">5</span>
+          <div class="price">10200000 Rials</div>
+          <div class="close"></div>
+        </div>
+        <div class="item">
+          <img src="tile.png" alt="item">
+          <h5 class="name">Firooze lorem GF12</h5>
+          <span class="entity">5</span>
+          <div class="price">10200000 Rials</div>
+          <div class="close"></div>
+        </div>
+        <div class="item">
+          <img src="tile.png" alt="item">
+          <h5 class="name">Firooze lorem GF12</h5>
+          <span class="entity">5</span>
+          <div class="price">10200000 Rials</div>
+          <div class="close"></div>
+        </div>
       </div>
       <div class="total">
         <div class="charge">
