responsive: Landing(Index) Completed

--- a/index-fa.html
+++ b/index-fa.html
@@ -31,6 +31,18 @@
 <!-- Add your site or application content here -->
 <div class="container">
   <section class="home" id="home">
+    <div class="responsive-menu" id="responsive-menu" onclick="rpmenu(this)"></div>
+    <div class="responsive-navbar" id="responsive-close">
+      <div class="close" onclick="rpclose(this)"></div>
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Galley</a></li>
+        <li><a href="#">Collection</a></li>
+        <li><a href="#">Wholesale</a></li>
+        <li><a href="#">Export</a></li>
+        <li><a href="#">About us</a></li>
+      </ul>
+    </div>
     <div class="slider-container v100">
       <div class="slider-control left inactive"></div>
       <div class="slider-control right"></div>
