responsive: generalshop Completed

--- a/generalshop.html
+++ b/generalshop.html
@@ -32,6 +32,18 @@
 <div class="container">
   <span class="fsymbol">T</span>
   <div class="header">
+    <div class="responsive-menu" id="responsive-menu" onclick="rpmenu(this)"></div>
+    <div class="responsive-navbar" id="responsive-close">
+      <div class="close" onclick="rpclose(this)"></div>
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Galley</a></li>
+        <li><a href="#">Collection</a></li>
+        <li><a href="#">Wholesale</a></li>
+        <li><a href="#">Export</a></li>
+        <li><a href="#">About us</a></li>
+      </ul>
+    </div>
     <div class="nav">
       <ul>
         <li class="links"><a href="#">Home</a></li>
